Line and area charts

--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -214,7 +214,7 @@
         </div>
         <div class="tab-pane" id="tabChart">
           <form name="forms.chartForm">
-            <chart ng-if="ctrl.isViewDataSeriesNull()" style-form="forms.styleForm" chart-form="forms.chartForm" table-name="ctrl.viewDataSeries.dataSets[0].format.table_name" model="ctrl.view" provider="ctrl.viewDataSeries.data_provider_id"></chart>
+            <chart ng-if="ctrl.isViewDataSeriesNull()" chart-form="forms.chartForm" table-name="ctrl.viewDataSeries.dataSets[0].format.table_name" model="ctrl.view" provider="ctrl.viewDataSeries.data_provider_id"></chart>
           </form>
           <div style="clear: both;"></div>
         </div>
