--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -381,14 +381,14 @@
     <script type="text/javascript" src="{[ BASE_URL ]}externals/i18next/i18next.min.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}externals/jquery-i18next/jquery-i18next.min.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}externals/i18next-xhr-backend/i18nextXHRBackend.min.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}externals/d3/dist/d3.min.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}externals/crossfilter2/crossfilter.min.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}externals/dc/dc.min.js"></script>
+    <!-- <script type="text/javascript" src="{[ BASE_URL ]}externals/d3/dist/d3.min.js"></script> -->
+    <!-- <script type="text/javascript" src="{[ BASE_URL ]}externals/crossfilter2/crossfilter.min.js"></script> -->
+    <!-- <script type="text/javascript" src="{[ BASE_URL ]}externals/dc/dc.min.js"></script> -->
     <script type="text/javascript" src="https://www.amcharts.com/lib/4/core.js"></script>
     <script type="text/javascript" src="https://www.amcharts.com/lib/4/charts.js"></script>
-    <script type="text/javascript" src="https://www.amcharts.com/lib/4/maps.js"></script>
-    <script type="text/javascript" src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script>
-    <script type="text/javascript" src="https://www.amcharts.com/lib/4/geodata/brazilLow.js"></script>
+    <!-- <script type="text/javascript" src="https://www.amcharts.com/lib/4/maps.js"></script> -->
+    <!-- <script type="text/javascript" src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script>
+    <script type="text/javascript" src="https://www.amcharts.com/lib/4/geodata/brazilLow.js"></script> -->
     <script type="text/javascript" src="https://www.amcharts.com/lib/4/themes/material.js"></script>
     <script type="text/javascript" src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
     <script>
