--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -232,7 +232,7 @@
 
               </div>
             </div>
-            <div id="map-tools" class="">
+            <div id="map-tools">
               <div id="authentication-div" class="hidden">
                 <div id="user-div" class="{% if (currentUser === null) %}hidden{% endif %}">
                   <p class="user-name">{% if currentUser !== null %}{[ currentUser.name ]}{% endif %}</p>
