Chart fix and changes on the examples

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -390,6 +390,7 @@
     <script type="text/javascript" src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
     <script>
       var BASE_URL = "{[ BASE_URL ]}";
+      var ADMIN_URL = "{[ ADMIN_URL ]}";
       var webadminHostInfo = {[webadminHostInfo|json|safe]};
       var webmonitorHostInfo = {[webmonitorHostInfo|json|safe]};
       var message = "{[message.content]}";
