--- a/examples/situacao_atual/index.css
+++ b/examples/situacao_atual/index.css
@@ -1,45 +1,20 @@
 body {
-  background: rgb(204,204,204) !important;
-  margin-top: 18px !important;
+  background-color: #eee !important;
 }
 
-#header {
-  background: white;
-  margin: 0 auto;
-  height: 180px;
-  border-top: 2px solid #f8c60b;
-  border-left: 2px solid #f8c60b;
-  border-right: 2px solid #f8c60b;
+.container {
+  background: #fff;
+  margin-top: 20px;
+  border-radius: 10px;
+  padding: 1rem;
 }
 
-#logo {
-  border: 0;
-  height: 4px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #f8c50bff, rgba(0, 0, 0, 0));
+.navbar {
+  background-color: #ccc;
 }
 
-#page {
-  background: white;
-  margin: 0 auto;
-  margin-bottom: 0.5cm;
-  border-left: 2px solid #f8c50b;
-  border-right: 2px solid #f8c60b;
-  border-bottom: 2px solid #f8c60b;
-}
-
-#top-logo{
-  text-align: center;
-  padding-top: 18px;
-  height: 120px;
-}
-
-.content-center{
-  text-align: center;
-}
-
-.content-center img {
-	margin-left: auto;
-	margin-right: auto;
+.row {
+  padding: 10px;
 }
 
 .table-situacao{
@@ -52,4 +27,20 @@ body {
 
 .chart-situacao {
   margin-bottom: 20px;
+}
+
+.chart {
+  height: 50%;
+}
+
+.navbar-item {
+  color: rgba(0,0,0,.9);
+}
+
+.card-disabled h5 {
+  color: #dfdfdf
+}
+.card-disabled img{
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
 }
