--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -283,6 +283,7 @@
             </div>
           </div>
         </form>
+
         <div class="col-md-12 terrama2-nopadding-box">
           <!-- schema form -->
           <div class="col-md-12 terrama2-nopadding-box" ng-show="ctrl.showStoragerForm">
@@ -347,7 +348,7 @@
                 <label>{{ i18n.__("Attribute Identifier") }}:</label>
 
                 <!-- Input text with optional selection directive-->
-                <terrama2-text-select selected-item="ctrl.metadata[ctrl.targetDataSeries.name].identifier" items="ctrl.columnsList"></terrama2-text-select>
+                <terrama2-text-select selected-item="ctrl.analysis.metadata.identifier" items="ctrl.columnsList"></terrama2-text-select>
                 <!-- required -->
                 <span class="help-block"
                       ng-show="forms.targetDataSeriesForm.identifier.$dirty && forms.targetDataSeriesForm.identifier.$error.required">
@@ -362,7 +363,8 @@
     </terrama2-box>
 
     <terrama2-box title="i18n.__(ctrl.analysis.type_id !== '{[ Enums.AnalysisType.GRID ]}' ? 'Additional Data' : 'Grid Data Series')"
-                  css="ctrl.css" ng-show="forms.generalDataForm.type.$valid">
+                  css="ctrl.css"
+                  ng-show="ctrl.analysis.type_id !== '{[ Enums.AnalysisType.VP ]}'  && forms.generalDataForm.type.$valid">
       <div class="col-md-12 terrama2-nopadding-box">
         <div class="col-md-12">
           <button type="button" class="btn btn-default pull-right" data-toggle="modal" data-target="#dataSeriesModal" style="margin-bottom: 15px">
