--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -43,7 +43,7 @@
             <span class="fa fa-bars"></span>
           </a>
       </div>
-      <aside class="main-sidebar custom-scrollbar-light">
+      <aside class="main-sidebar custom-scrollbar-light" style="width: 300px">
         <section class="sidebar">
           <div id="main-header" class="main-header" role="navigation">
             <div class="header-logo">
