fix css bug in Attributes Table

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -132,7 +132,7 @@
       </aside>
 
       <!-- Content Wrapper. Contains page content -->
-      <div class="content-wrapper">
+      <div class="content-wrapper" style="margin-left: 300px;">
 
         <!-- Main content -->
         <div id="content" class="content">
