Adding Style for Vector Processing View

--- a/webapp/public/javascripts/angular/views/templates/style.html
+++ b/webapp/public/javascripts/angular/views/templates/style.html
@@ -54,7 +54,7 @@
 
   <div class="col-md-12 terrama2-nopadding-box">
     <div class="col-md-6 terrama2-nopadding-box">
-      <div class="col-md-12" ng-if="$ctrl.type === $ctrl.DataSeriesType.GEOMETRIC_OBJECT || $ctrl.type === $ctrl.DataSeriesType.OCCURRENCE || $ctrl.type === $ctrl.DataSeriesType.ANALYSIS_MONITORED_OBJECT">
+      <div class="col-md-12" ng-if="$ctrl.type === $ctrl.DataSeriesType.VECTOR_PROCESSING_OBJECT || $ctrl.type === $ctrl.DataSeriesType.GEOMETRIC_OBJECT || $ctrl.type === $ctrl.DataSeriesType.OCCURRENCE || $ctrl.type === $ctrl.DataSeriesType.ANALYSIS_MONITORED_OBJECT">
         <div class="form-group" terrama2-show-errors>
           <label><span ng-bind="$ctrl.i18n.__('Attribute')"></span>:</label>
           <input class="form-control" 
