--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -322,7 +322,7 @@
                   ng-if="ctrl.analysis.type_id === '{[ Enums.AnalysisType.VP ]}' && forms.generalDataForm.type.$valid">
             </vector-processing>
 
-            <div class="col-md-6" ng-show="ctrl.analysis.type_id === '{[ Enums.AnalysisType.MONITORED ]}'">
+            <div class="col-md-6" ng-show="ctrl.analysis.type_id === '{[ Enums.AnalysisType.MONITORED ]}' || ctrl.analysis.type_id === '{[ Enums.AnalysisType.DCP ]}'">
               <div class="form-group has-feedback" terrama2-show-errors>
                 <label>{{ i18n.__(ctrl.analysis.type_id === '{[ Enums.AnalysisType.VP ]}' ? 'Monitored DataSeries' : 'DataSeries') }}:</label>
                 <select class="form-control"
