--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -38,11 +38,11 @@
   </head>
   <body class="hold-transition skin-black sidebar-mini">
     <div class="wrapper">
-      <div data-toggle="offcanvas" class="sidebar-toggle-fixed">
+      <!-- <div data-toggle="offcanvas" class="sidebar-toggle-fixed">
           <a id="collapseButton" role="button">
             <span class="fa fa-bars"></span>
           </a>
-      </div>
+      </div> -->
       <aside class="main-sidebar custom-scrollbar-light" style="width: 300px">
         <section class="sidebar">
           <div id="main-header" class="main-header" role="navigation">
@@ -51,7 +51,7 @@
                 <img src="{[ BASE_URL ]}images/terrama2_logo2.png" class="img-square logo-img" alt="User Image">
                 <span class="logo-text">TerraMA²</span>
               </a>
-              <a class="sidebar-toggle" data-toggle="offcanvas" role="button" id="collapseButton"></a>
+              <!-- <a class="sidebar-toggle" data-toggle="offcanvas" role="button" id="collapseButton"></a> -->
             </div>
           </div>
           <div class="sidebar-body">
