--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -35,23 +35,35 @@
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/datatables/media/css/jquery.dataTables.css">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/bootstrap-daterangepicker/daterangepicker.css">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
+    <script>
+      var USER_CONFIG = {[ userConfig|json|safe ]};
+    </script>
   </head>
   <body class="hold-transition skin-black sidebar-mini">
     <div class="wrapper">
-      <!-- <div data-toggle="offcanvas" class="sidebar-toggle-fixed">
+      <div data-toggle="offcanvas" class="sidebar-toggle-fixed">
           <a id="collapseButton" role="button">
             <span class="fa fa-bars"></span>
           </a>
-      </div> -->
+      </div>
       <aside class="main-sidebar custom-scrollbar-light" style="width: 300px">
         <section class="sidebar">
           <div id="main-header" class="main-header" role="navigation">
             <div class="header-logo">
-              <a class="logo-container" href="{[ BASE_URL ]}">
-                <img src="{[ BASE_URL ]}images/terrama2_logo2.png" class="img-square logo-img" alt="User Image">
-                <span class="logo-text">TerraMA²</span>
-              </a>
-              <!-- <a class="sidebar-toggle" data-toggle="offcanvas" role="button" id="collapseButton"></a> -->
+
+              {% if userConfig.logo %}
+                <a class="logo-container" href="{[ userConfig.logoLink ]}">
+                  <img src="{[ userConfig.logo ]}" class="img-square logo-img" alt="Logo Image">
+                  <span class="logo-text">TerraMA²</span>
+                </a>
+              {% else %}
+                <a class="logo-container" href="{[ BASE_URL ]}">
+                  <img src="{[ BASE_URL ]}images/terrama2_logo2.png" class="img-square logo-img" alt="Logo Image">
+                  <span class="logo-text">TerraMA²</span>
+                </a>
+              {% endif %}
+
+              <a class="sidebar-toggle" data-toggle="offcanvas" role="button" id="collapseButton"></a>
             </div>
           </div>
           <div class="sidebar-body">
@@ -126,6 +138,11 @@
               <a href="http://www.worldbank.org/" target="_blank">
                 <img id="world-bank-image" src="{[ BASE_URL ]}images/banco_mundial.png">
               </a>
+              {% for lf in userConfig.logoFooter %}
+                <a href="{[lf.link]}" target="_blank">
+                  <img id="world-bank-image" src="{[lf.path]}">
+                </a>
+              {% endfor %}
             </div>
           </div>
         </section>
