--- a/webapp/public/javascripts/angular/schema-form-plugin/mask-warn/templates/terrama2-mask-field.html
+++ b/webapp/public/javascripts/angular/schema-form-plugin/mask-warn/templates/terrama2-mask-field.html
@@ -7,8 +7,7 @@
     <!-- Specify the model for the directive and add the directive, making the controller available to the children-->
     <div>
         <!-- Bind the input to the model-->
-        <input ng-show="form.key" type="{{form.type}}" step="any" sf-changed="form" placeholder="{{form.placeholder}}" class="form-control {{form.fieldHtmlClass}}" id="{{form.key.slice(-1)[0]}}" ng-model-options="form.ngModelOptions" ng-disabled="form.readonly" schema-validate="form" name="{{form.key.slice(-1)[0]}}" aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}" sf-field-model ng-model="$$value$$" required terrama2-mask-form>
-
+        <input ng-show="form.key" type="{{form.type}}" autocomplete="off" step="any" sf-changed="form" placeholder="{{form.placeholder}}" class="form-control {{form.fieldHtmlClass}}" id="{{form.key.slice(-1)[0]}}" ng-model-options="form.ngModelOptions" ng-disabled="form.readonly" schema-validate="form" name="{{form.key.slice(-1)[0]}}" aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}" sf-field-model ng-model="$$value$$" required terrama2-mask-form>
     </div>
 
     <!-- hasError() and the other functions are also defined by ASF, so this will either
