--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -101,7 +101,7 @@
                   data-placement="bottom"><i class="fa fa-question nav-text-shadow"></i></button></a>
             </li>
             <li class="user user-menu">
-              <terrama2-countries-list language="{{ '{[ userLocale ]}' || 'us' }}"></terrama2-countries-list>
+              <terrama2-countries-list language="{{ '{[ userLocale ]}' || 'br' }}"></terrama2-countries-list>
             </li>
             <!-- User Account: style can be found in dropdown.less -->
             {% if (currentUser !== null) %}
