--- a/webapp/views/login.html
+++ b/webapp/views/login.html
@@ -72,7 +72,7 @@
                 <div class="login-box-msg">
                     <span></span>
                     <span ng-bind="i18n.__('Sign in to start your session')"></span>
-                    <terrama2-countries-list language="{{ '{[ userLocale ]}' || 'us' }}"></terrama2-countries-list>
+                    <terrama2-countries-list language="{{ '{[ userLocale ]}' || 'br' }}"></terrama2-countries-list>
                 </div>
 
                 <div class="alert alert-danger" style="display: {[ divDisplay ]}">
