bug correction in changing attributes in static data

--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -1,3 +1,9 @@
+@font-face{
+  font-family: icomoon;
+  src: url('../fonts/icomoon.woff2') format('woff2'),
+       url('../fonts/icomoon.woff') format('woff');
+}
+
 body,
 html {
   height: inherit !important;
