--- a/webapp/public/javascripts/angular/datetimepicker/templates/filterdatetimepicker.html
+++ b/webapp/public/javascripts/angular/datetimepicker/templates/filterdatetimepicker.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class='col-md-12 col-sm-12'>
           <div class="form-group">
-            <div class='input-group date' datetimepicker options="vm.optionsFrom" data-ng-model="beforeDatetime" id="{{ identifier }}" on-change="vm.update(beforeDatetime, afterDatetime)">
+            <div class='input-group date' datetimepicker options="vm.optionsFrom" data-ng-model="beforeDatetime" id="{{ identifier }}">
               <input type='text' class="form-control"/>
               <span class="input-group-addon">
                 <span class="glyphicon glyphicon-calendar"></span>
@@ -23,7 +23,7 @@
       <div class="row">
         <div class='col-md-12 col-sm-12'>
           <div class="form-group">
-            <div class='input-group date' datetimepicker options="vm.optionsTo" data-ng-model="afterDatetime" id="{{ identifier }}" on-change="vm.update(beforeDatetime, afterDatetime)">
+            <div class='input-group date' datetimepicker options="vm.optionsTo" data-ng-model="afterDatetime" id="{{ identifier }}">
               <input type='text' class="form-control"/>
               <span class="input-group-addon">
                 <span class="glyphicon glyphicon-calendar"></span>
