--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -35,6 +35,9 @@
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/datatables/media/css/jquery.dataTables.css">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/bootstrap-daterangepicker/daterangepicker.css">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
+    <script>
+      var USER_CONFIG = {[ userConfig|json|safe ]};
+    </script>
   </head>
   <body class="hold-transition skin-black sidebar-mini">
     <div class="wrapper">
@@ -47,10 +50,19 @@
         <section class="sidebar">
           <div id="main-header" class="main-header" role="navigation">
             <div class="header-logo">
-              <a class="logo-container" href="{[ BASE_URL ]}">
-                <img src="{[ BASE_URL ]}images/terrama2_logo2.png" class="img-square logo-img" alt="User Image">
-                <span class="logo-text">TerraMA²</span>
-              </a>
+
+              {% if userConfig.logo %}
+                <a class="logo-container" href="{[ userConfig.logoLink ]}">
+                  <img src="{[ BASE_URL ]}images/{[ userConfig.logo ]}" class="img-square logo-img" alt="Logo Image">
+                  <span class="logo-text"></span>
+                </a>
+              {% else %}
+                <a class="logo-container" href="{[ BASE_URL ]}">
+                  <img src="{[ BASE_URL ]}images/terrama2_logo2.png" class="img-square logo-img" alt="Logo Image">
+                  <span class="logo-text">TerraMA²</span>
+                </a>
+              {% endif %}
+
               <a class="sidebar-toggle" data-toggle="offcanvas" role="button" id="collapseButton"></a>
             </div>
           </div>
@@ -114,18 +126,26 @@
           </div>
           <div class="sidebar-footer">
             <div class="institutions-logos">
-              <a href="http://www.inpe.br/" target="_blank">
-                <img id="inpe-image" src="{[ BASE_URL ]}images/inpe.png">
-              </a>
-              <a href="http://www.inpe.br/queimadas/" target="_blank">
-                <img id="programa-queimadas-image" src="{[ BASE_URL ]}images/programa_queimadas.png">
-              </a>
-              <a href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs" target="_blank">
-                <img id="defra-image" src="{[ BASE_URL ]}images/defra.png">
-              </a>
-              <a href="http://www.worldbank.org/" target="_blank">
-                <img id="world-bank-image" src="{[ BASE_URL ]}images/banco_mundial.png">
-              </a>
+              {% if userConfig.logoFooter && userConfig.logoFooter.length > 0 %}
+                {% for lf in userConfig.logoFooter %}
+                  <a href="{[lf.link]}" target="_blank">
+                    <img id="world-bank-image" src="{[ BASE_URL ]}images/{[lf.path]}">
+                  </a>
+                {% endfor %}
+              {% else %}
+                <a href="http://www.inpe.br/" target="_blank">
+                  <img id="inpe-image" src="{[ BASE_URL ]}images/inpe.png">
+                </a>
+                <a href="http://www.inpe.br/queimadas/" target="_blank">
+                  <img id="programa-queimadas-image" src="{[ BASE_URL ]}images/programa_queimadas.png">
+                </a>
+                <a href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs" target="_blank">
+                  <img id="defra-image" src="{[ BASE_URL ]}images/defra.png">
+                </a>
+                <a href="http://www.worldbank.org/" target="_blank">
+                  <img id="world-bank-image" src="{[ BASE_URL ]}images/banco_mundial.png">
+                </a>
+              {% endif %}
             </div>
           </div>
         </section>
