--- a/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
+++ b/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
@@ -670,7 +670,7 @@ img[src=""] {
   position: absolute;
   width: 320px;
   height: 480px;
-  right: 300px
+  right: 400px
 }
 
 #layer-toolbox,
@@ -879,15 +879,11 @@ img[src=""] {
   margin: 0 auto;
   text-align: justify;
   font-size: 18px;
+  height: 500px !important;
 }
 
 .ui-dialog {
-  width: 50% !important;
-  height: calc(100% - 80px) !important;
-  bottom: 50px;
   overflow: hidden;
-  top: 20px !important;
-  margin: 0 auto;
   z-index: 99999 !important;
 }
 
