--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -321,7 +321,7 @@
                   metadata="ctrl.metadata"
                   ng-if="ctrl.analysis.type_id === '{[ Enums.AnalysisType.VP ]}' && forms.generalDataForm.type.$valid">
             </vector-processing>
-
+           
             <div class="col-md-6" ng-show="ctrl.analysis.type_id === '{[ Enums.AnalysisType.MONITORED ]}' || ctrl.analysis.type_id === '{[ Enums.AnalysisType.DCP ]}'">
               <div class="form-group has-feedback" terrama2-show-errors>
                 <label>{{ i18n.__(ctrl.analysis.type_id === '{[ Enums.AnalysisType.VP ]}' ? 'Monitored DataSeries' : 'DataSeries') }}:</label>
@@ -329,7 +329,7 @@
                         name="targetDataSeries"
                         ng-disabled="ctrl.isUpdating"
                         ng-model="ctrl.targetDataSeries"
-                        ng-options="targetDS as targetDS.name for targetDS in ctrl.filteredDataSeries"
+                        ng-options="targetDS as targetDS.name for targetDS in ctrl.filteredDataSeries | filter: {isDynamic: false}"
                         ng-change="ctrl.onTargetDataSeriesChange()"
                         ng-required="ctrl.analysis.type_id !== '{[ Enums.AnalysisType.GRID ]}'">
                 </select>
